src/components/tooltip/tooltip.css
.tooltip-target {
	display: inline-block;
	position: relative;
}

.tooltip {
	display: flex;
	justify-content: center;
	align-items: center;
	width: auto;

	position: absolute;
	top: calc(100% + var(--tooltip-offset));
	left: 0;
	right: 0;
	z-index: 1;

	visibility: hidden;
	transition: opacity var(--default--transition);
	opacity: 0;
}
.tooltip-text {
	padding: 5px 10px;
	background-color: var(--nord0);
	color: var(--nord4);
	text-align: center;
	border-radius: 4px;
}

.tooltip-target:hover .tooltip {
	visibility: visible;
	opacity: 1;
	transition: opacity 0.3s;
}

.tooltip.tooltip-top {
	top: unset;
	bottom: calc(100% + var(--tooltip-offset));
}

.tooltip.tooltip-bottom {
	top: calc(100% + var(--tooltip-offset));
}

.tooltip.tooltip-right {
    top: 0;
    bottom: 0;
    left: unset;
    right: calc(-100% - var(--tooltip-offset));
}

.tooltip.tooltip-left {
    top: 0;
    bottom: 0;
    right: unset;
    left: calc(-100% - var(--tooltip-offset));
}

